# PHP-CPP

./: .clang_complete  .gitignore  .project  .travis.yml  CMakeLists.txt  Makefile  Makefile.FreeBSD  Makefile.osx  Makefile.static  Modifications.md  README.md  README_PHP-CPP-Cmake.md  README_zhCN.md  build_all.cmd  build_all.sh  phpcpp.h  test_extension.cmd
.github/workflows/: c-cpp.yml  github-actions.yml
Examples/: CMakeLists.txt  README.md
Examples/CallPhpFunctions/: 30-phpcpp.ini  CMakeLists.txt  Makefile  callphpfunction.cpp  callphpfunction.php
Examples/ConstStaticProp/: CMakeLists.txt  test.php
Examples/ConstStaticProp/cpp/: Makefile  mytestext.cpp
Examples/CppClassesInPhp/: 30-cppclassinphp.ini  CMakeLists.txt  Makefile  check_iterable.php  check_map.php  cppclassinphp.cpp  cppclassinphp.php  functionwithparameters.cpp  functionwithparameters.php  includeMyCustomClass.h  includes.h  mycustomclass.cpp  mycustomclass.h
Examples/DlUnrestricted/: CMakeLists.txt  Makefile  dlunrestricted.cpp  dlunrestricted.ini  dlunrestricted.php
Examples/EmptyExtension/: CMakeLists.txt  Makefile  main.cpp  yourextension.ini
Examples/Exceptions/: 30-phpcpp.ini  Makefile  exception.cpp  exception.php
Examples/Exceptions/ExceptionCatch/: 30-phpcpp.ini  CMakeLists.txt  Makefile  exception.php  exceptionCatch.cpp
Examples/Exceptions/ExceptionThrow/: 30-exceptionThrow.ini  CMakeLists.txt  Makefile  exception.php  exceptionThrow.cpp
Examples/Extension/: 30-phpcpp.ini  CMakeLists.txt  Makefile  extension.cpp  extension.php
Examples/FunctionNoParameters/: 30-phpcpp.ini  CMakeLists.txt  Makefile  functionnoparameters.cpp  functionnoparameters.php
Examples/FunctionReturnValue/: 30-functionreturnvalue.ini  30-phpcpp.ini  CMakeLists.txt  Makefile  functionreturnvalue.cpp  functionreturnvalue.php
Examples/FunctionVoid/: 30-functionvoid.ini  30-phpcpp.ini  CMakeLists.txt  Makefile  functionvoid.cpp  functionvoid.php
Examples/FunctionWithParameters/: 30-functionwithparameters.ini  30-phpcpp.ini  CMakeLists.txt  Makefile  functionwithparameters.cpp  functionwithparameters.php
Examples/GlobalBug/: Makefile  globalbug.cpp  globalbug.php
Examples/Globals/: 30-globals.ini  CMakeLists.txt  Makefile  globals.cpp  globals.php
Examples/IncludeOnce/: 30-includeonce.ini  Makefile  class.php  includeonce.cpp  includeonce.php
Examples/Namespaces/: README.md  namespase.php
Examples/Namespaces/cpp/: mytestext.cpp  mytestext.ini
Examples/PhpInfo/: Makefile  phpinfo.cpp  phpinfo.hpp  phpinfo.ini  phpinfo.php
Examples/ReturnObject/: CMakeLists.txt  Makefile  child.h  main.cpp  master.h  returnobject.ini  test.php
Examples/extism/: Makefile  README.md  extismcpp.cpp  extismcpp.ini  extismcpp.php
Examples/phpinfoExample/: Makefile  phpinfoexample.cpp  phpinfoexample.hpp  phpinfoexample.ini  phpinfoexample.php
Examples/simple/: 30-phpcpp.ini  CMakeLists.txt  Makefile  simple.cpp
cmake/: sample.cmake  sources.cmake  utils.cmake
common/: extensionbase.h  includes.h  modifiers.cpp  streambuf.cpp  streambuf.h
config/: config.cpp
documentation/: bubblesort.html  calling-functions-and-methods.html  classes-and-objects.html  classes.html  comparing-objects.html  compile-extensions.html  constants.html  constructors-and-destructors.html  dynamic-loading.html  exceptions.html  extension-callbacks.html  extension-lifetime.html  functions.html  inheritance.html  ini.html  install.html  lambda-functions.html  loading-extensions.html  magic-interfaces.html  magic-methods-and-interfaces.html  magic-methods.html  namespaces.html  output-and-errors.html  parameters.html  properties.html  special-features.html  ten-reasons-for-using-php-cpp.html  tutorial.html  variables.html  your-first-extension.html
hhvm/: extension.cpp  extensionimpl.h  includes.h  streambuf.cpp  streams.cpp
include/: abstractclass.h  argument.h  arguments.h  array.h  arrayaccess.h  base.h  byref.h  byval.h  call.h  callable.h  callstatic.h  class.h  classbase.h  classconst.h  classinfo.h  classmodifier.h  classtype.h  const.h  constant.h  constants.h  countable.h  deprecated.h  environment.h  error.h  errors.h  exception.h  extension.h  extinterface.h  fastcall.h  fatalerror.h  file.h  finalclass.h  flag.h  forcedvalue.h  function.h  functions.h  global.h  globals.h  hardcoded.h  hashmember.h  (+48 more)
include/phpcpp/: array.h  byval.h  call.h  classtype.h  constant.h  countable.h  deprecated.h  errors.h  exception.h  extension.h  file.h  function.h  globals.h  hashmember.h  ini.h  inivalue.h  modifiers.h  namespace.h  noexcept.h  script.h  serializable.h  version.h
include/valueiterator/: hashitem.h  hashitemarray.h  hashitemarrayreverse.h  hashitemarraytraversable.h  hashitemiterator.h  hashitemobject.h  hashitemobjectreverse.h  hashitemtraversable.h  hashpositionwrapper.h  readme  (+1 more)
src/: Makefile  arginfo.h  argument.cpp  arguments.cpp  arithmetic.h  base.cpp  boolmember.h  callable.cpp  callable.h  class.cpp  classbase.cpp  classimpl.cpp  classimpl.h  classinfo.cpp  config.m4  countable.cpp  doublemember.h  entry.cpp  environment.cpp  error.cpp  exception.cpp  extension.cpp  extensionimpl.cpp  extensionimpl.h  extinterface.cpp  flag.cpp  floatmember.h  function.cpp  function.h  functions.cpp  functions.h  global.cpp  globals.cpp  hashitemiterator.cpp  hashitemtraversable.cpp  hashiterator.cpp  hashiterator.h  hashmember.cpp  hashpositionwrapper.cpp  hiddenpointer.h  (+42 more)
tests/: 1.sh  Makefile  prepare.sh  readme  run-tests.php  test.sh
zend/: arithmetic.h  array.cpp  base.cpp  boolmember.h  callable.cpp  callable.h  callable2.cpp  classbase.cpp  classimpl.cpp  classimpl.h  classtype.h  compileroptions.h  constant.cpp  constantfuncs.cpp  constantimpl.h  delayedfree.h  error.cpp  eval.cpp  exception.cpp  exception_handler.cpp  execarguments.h  executestate.h  exists.cpp  extension.cpp  extensionimpl.cpp  extensionimpl.h  extensionpath.h  fastcall.cpp  fatalerror.cpp  file.cpp  floatmember.h  function.cpp  function.h  functor.cpp  functor.h  global.cpp  globals.cpp  hashiterator.h  hiddenpointer.h  includes.h  (+44 more)
(+110 files in other folders)
