project(sample)

add_subdirectory(CallPhpFunctions)
#add_subdirectory(ConstStaticProp)
add_subdirectory(CppClassesInPhp)
add_subdirectory(DlUnrestricted)
add_subdirectory(EmptyExtension)
add_subdirectory(Exceptions/ExceptionCatch)
add_subdirectory(Exceptions/ExceptionThrow)
add_subdirectory(Extension)
add_subdirectory(FunctionNoParameters)
add_subdirectory(FunctionReturnValue)
add_subdirectory(FunctionVoid)
add_subdirectory(FunctionWithParameters)
add_subdirectory(Globals)
add_subdirectory(ReturnObject)
add_subdirectory(simple)